--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <h1>{{pageTitle}}</h1>
 <h2>header file</h2>
-<p><a href='/'>Root</a></p>
-<p><a href='/home'>Home</a></p>
+<p><a href='/'>Home</a></p>
 <p><a href='/about'>About</a></p>
+<p><a href='/projects'>Projects</a></p>
